--- a/formatconv/src/assets/screen-item.css
+++ b/formatconv/src/assets/screen-item.css
@@ -187,6 +187,7 @@ input[type="password"] {
 }
 
 .register button {
+  width: 200px;
   height: 37px;
   border-radius: 5px;
   background-color: #6c8bc5;
