--- a/formatconv/src/assets/screen-item.css
+++ b/formatconv/src/assets/screen-item.css
@@ -164,6 +164,11 @@ input[type="password"] {
   transition: all 0.5s;
   cursor: pointer;
 }
+
+.img-fluid {
+  max-width: 100%;
+  height: 100%;
+}
 /* signin-form end */
 
 /* header-display start */
