--- a/formatconv/src/assets/screen-item.css
+++ b/formatconv/src/assets/screen-item.css
@@ -1,10 +1,20 @@
 /* signin-form start */
 .container {
-  min-height: 50vh;
+  min-height: 35vh;
+  /* width: 700px; */
   /* background-color: #f8f6f5; */
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.alert {
+  text-align: center;
+  width: 500px;
+  /* display: flex; */
+  align-content: stretch;
+  /* align-items: center; */
+  margin-left: 380px;
+  margin-top: 30px;
 }
 .profile-btn {
   display: flex;
