--- a/formatconv/src/assets/screen-item.css
+++ b/formatconv/src/assets/screen-item.css
@@ -50,6 +50,7 @@ input[type="email"] {
   /* padding: 0 20px 0 10px; */
   box-sizing: border-box;
   transition: all 0.5s;
+  margin-top: 10px;
 }
 
 .reg-input-text {
@@ -61,19 +62,38 @@ input[type="email"] {
   padding-left: 100px;
   position: relative;
 }
-.mail-label {
-  width: 100px;
+.account-name-label {
+  width: 110px;
   text-align: right;
+  padding-bottom: 20px;
+  padding-right: 10px;
+}
+.mail-label {
+  width: 110px;
+  text-align: right;
+  padding-bottom: 10px;
+  padding-right: 10px;
+}
+.signin-mail-label {
+  width: 110px;
+  text-align: right;
+  padding-bottom: 20px;
+  padding-right: 10px;
 }
 .password-label {
-  width: 100px;
+  width: 110px;
   text-align: right;
+  padding-bottom: 10px;
+  padding-right: 10px;
 }
 .totp-label {
   width: 170px;
   text-align: left;
 }
 .reg-accname-label {
+  width: 200px;
+}
+.sign-up-label {
   width: 200px;
 }
 /* .input-text span {
@@ -98,6 +118,7 @@ input[type="password"] {
   margin-bottom: 20px;
   box-sizing: border-box;
   transition: all 0.5s;
+  margin-top: 10px;
 }
 
 .input-text a {
@@ -124,6 +145,7 @@ input[type="password"] {
   /* background-color: #e9ecef; */
   border: 1px solid #ced4da;
   border-radius: 0.375rem;
+  margin-top: 10px;
 }
 
 /* @keyframes check {
@@ -144,7 +166,7 @@ input[type="password"] {
   padding-top: 15px;
 }
 .sign-in button {
-  margin-left: 100px;
+  margin-left: 110px;
   width: 150px;
   height: 37px;
   border-radius: 5px;
@@ -166,8 +188,7 @@ button[disabled] {
 }
 
 .sign-up {
-  padding-top: 20px;
-  padding-left: 25px;
+  padding-bottom: 10px;
 }
 .sign-up button {
   width: 150px;
@@ -444,7 +465,7 @@ button[disabled] {
 
 .signup-link {
   margin-left: 280px;
-  padding-top: 30px;
+  margin-top: 30px;
 }
 
 /*
@@ -502,3 +523,11 @@ button[disabled] {
   background: #4a69a3 !important;
 }
 /* drop-down end */
+
+table {
+  margin-top: 30px;
+}
+
+.signup-tbl {
+  margin-left: 100px;
+}
